dnl Process this file with autoconf to produce a configure script.
AC_INIT(libbfcd/tools.h)

AC_PROG_INSTALL

AC_CANONICAL_SYSTEM
AC_CANONICAL_HOST

case "$target" in
	x86_64-*-linux-*)
		HAVE_DL="1"
		gnumake=make
		CFLAGS="$CFLAGS -DOS_LINUX -D_GNU_SOURCE"
		LIBS="$LIBS -L/usr/local/lib"
	;;
esac
AC_SUBST(gnumake)

dnl GNAT GPL
dnl AC_ARG_VAR(GNATMAKE,[gnatmake from GNAT GPL command])
dnl if test "${GNATMAKE+set}" != set ; then
dnl 	AC_CHECK_PROG(gnatmake,gnatmake,gnatmake,no)
dnl else
dnl 	AC_CHECK_PROG(gnatmake,[$GNATMAKE],[$GNATMAKE],no)
dnl fi
dnl if test "x$gnatmake" = "xno" ; then
dnl 	AC_MSG_ERROR(you must have 'gnatmake' installed for compile BFCD7 or set environment variable GNATMAKE);
dnl fi
dnl AC_SUBST(gnatmake)

dnl Checks for programs.
AC_PROG_CC
AC_PROG_CPP
AC_PROG_CXX
AC_PROG_GCC_TRADITIONAL
AC_PROG_INSTALL
AC_PROG_LN_S
AC_CHECK_PROG(MAKEDEP,makedepend,yes)
if test "x$MAKEDEP" != "xyes" ; then
	AC_MSG_ERROR(you must have 'makedepend' installed for compile BFCD7);
fi

dnl Checks for libraries.
if test $HAVE_DL = "1" ; then 
	AC_CHECK_LIB(dl,dlopen,,AC_MSG_ERROR(you must have libdl.so instaled for compile BFCD7))
fi
dnl AC_CHECK_LIB(gc,GC_malloc,,AC_MSG_ERROR(you must have Boehm Garbage Collector installed for compile BFCD7))
dnl AC_CHECK_LIB(readline,readline,,AC_MSG_ERROR(you must have libreadline installed for compile BFCD7))
AC_CHECK_LIB(edit,el_init,,AC_MSG_ERROR(you must have libedit installed for compile BFCD7))

dnl Checks for header files.
AC_HEADER_STDC
AC_CHECK_HEADERS(unistd.h)
AC_CHECK_HEADERS(sys/mman.h)
AC_CHECK_HEADERS(sys/ipc.h)
AC_CHECK_HEADERS(sys/shm.h)
AC_TYPE_SIGNAL

dnl Checks for typedefs, structures, and compiler characteristics.
AC_C_INLINE
AC_CHAR_UNSIGNED

AC_CHECK_SIZEOF(char)
AC_CHECK_SIZEOF(unsigned char)
AC_CHECK_SIZEOF(short)
AC_CHECK_SIZEOF(int)
AC_CHECK_SIZEOF(int*)
AC_CHECK_SIZEOF(long)
AC_CHECK_SIZEOF(long long)
AC_CHECK_SIZEOF(size_t)
AC_CHECK_SIZEOF(wchar_t)

AC_SYS_INTERPRETER

dnl Checks for library functions.
AC_CHECK_FUNCS(rewind)
AC_CHECK_FUNCS(strncpy)
AC_CHECK_FUNCS(tmpfile)
AC_FUNC_MMAP
AC_CHECK_FUNCS(shmget)
AC_CHECK_FUNCS(shmat)
AC_CHECK_FUNCS(strncmp)
AC_CHECK_FUNCS(getopt)
AC_CHECK_FUNCS(strtol)
AC_CHECK_FUNCS(isprint)
AC_CHECK_FUNCS(isspace)
AC_CHECK_FUNCS(abort)
AC_CHECK_FUNCS(dlerror)
AC_CHECK_FUNCS(dlopen)
AC_CHECK_FUNCS(dlclose)
AC_CHECK_FUNCS(dlsym)
AC_CHECK_FUNCS(shmctl)
AC_CHECK_FUNCS(shmdt)
AC_CHECK_FUNCS(pow10)

dnl Configure files
AC_CONFIG_HEADER(libbfcd/config.h)
AC_OUTPUT(Makefile src/Makefile libbfcd/Makefile)
